--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheets" href="style.css"></link>
+    <link rel="stylesheet" href="style.css"></link>
     <script defer href="app.js"></script>
     <title>About Me</title>
 
 </head>
 <body>
-   <h1>About Me</h1> 
+   <div class = "nav-container">
+    <nav>
+        <ul>
+            <li class="list me">About Me</li>
+            <li class="list resume">Resume</li>
+            <li class="list examples">Examples</li>  
+        </ul>
+    </nav>
+</div>
+    <div class="about-container">
+        <h1>About Me</h1> 
+    </div>
 </body>
 </html>
