working on centering items

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
 </div>
     <div class="about-container">
         <div class ="h1text"> <h1 class ="h1">About Me</h1> </div>
-        <div class="text-contain"><p class ="metext">Hello, my name is Touria. I'm a junior front-end web developer, my goal is to land my first job in the industry. I'm 22 years old and i'm a first generation immigrant from morocco, and I LOVE redbull.</p></div>
-        <img class="pfp" src="https://imgs.search.brave.com/55eFn53foS1oKYLG96By3dUN27TkYdKvML9821unvy0/rs:fit:705:705:1/g:ce/aHR0cHM6Ly93d3cu/d29ybGRmdXR1cmVj/b3VuY2lsLm9yZy93/cC1jb250ZW50L3Vw/bG9hZHMvMjAyMC8w/Ni9ibGFuay1wcm9m/aWxlLXBpY3R1cmUt/OTczNDYwXzEyODAt/MS03MDV4NzA1LnBu/Zw" alt="blank profile image">
-    </div>
+        <div class="text">
+        <div class ="text-contain"><p class ="metext">Hello, my name is Touria. I'm a junior front-end web developer, my goal is to land my first job in the industry. I'm 22 years old and i'm a first generation immigrant from morocco, and I LOVE redbull.</p>
+        </div>
+            </div>
+        <div class = "pfp-contain">   <img class="pfp"
+            src="https://imgs.search.brave.com/55eFn53foS1oKYLG96By3dUN27TkYdKvML9821unvy0/rs:fit:705:705:1/g:ce/aHR0cHM6Ly93d3cu/d29ybGRmdXR1cmVj/b3VuY2lsLm9yZy93/cC1jb250ZW50L3Vw/bG9hZHMvMjAyMC8w/Ni9ibGFuay1wcm9m/aWxlLXBpY3R1cmUt/OTczNDYwXzEyODAt/MS03MDV4NzA1LnBu/Zw" alt="blank profile image"></div>
+    </div
 </body>
 </html>
