--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
             
         </ul>
         <p><li class="list contact"><a href ="">Contact Me</a></li></p>
+            <div class="hamburger">
+            <span class = "bar"></span>
+            <span class = "bar"></span>
+            <span class = "bar"></span>
+        </div>
     </nav>
 </div>
+
     <div class="about-container">
         <div class ="h1text"> <h1 class ="h1">Welcome</h1> </div>
         <div class="text">
