--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class = "nav-container">
     
         <ul>
-            <li class="list me"><a href ="">About Me</a></li>
+            <li class="list me"><a href ="index.html">About Me</a></li>
             <li class="list resume"><a href="">Resume</a></li>
             <li class="list examples"><a href ="">Examples</a></li>
-            <p><li class="list contact"><a href ="">Contact Me</a></li></p>
+            <p><li class="list contact"><a href ="contact/contact.html">Contact Me</a></li></p>
 
         </ul>
 </div> 
