adding number validation

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -45,14 +45,15 @@
 
         </div>
             
-            <div  class="number-item item">
-            <label for = "number">Your Number</label>
-            <input type ="text" id ="number" class="input-item" placeholder ="Your Number"  required>
+            <div  class="number-item item" >
+            <label id ="number-label" for = "number">Your Number</label>
+            <input type ="text" id ="number-field" class="input-item" placeholder ="Your Number"  required>
+            <span id="number-error"></span>
             </div>
             
             <div  class="message-item item">
             <label for = "message">Enter A Message</label>
-            <textarea id = "message" class="input-item" rows = "3" placeholder=""></textarea>
+            <textarea id = "message" class="input-item" rows = "3" ></textarea>
             </div>
 
             <div  class="btn-item item">
