added validation to name, border changes color if user inputs text that matches regex

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -35,7 +35,7 @@
             <h2 class = "title">Contact me</h2>
             <div  class="name-item item">
             <label for = "name">Your Name</label>
-            <input type ="text" id ="name" class="input-item" required>
+            <input type ="text" id ="name-field" class="input-item" maxlength="40" required>
             </div>
             
             <div  class="email-item item">
