fixing borderbottom style

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -36,6 +36,7 @@
             <div  class="name-item item">
             <label for = "name">Your Name</label>
             <input type ="text" id ="name-field" class="input-item" maxlength="40" required>
+            <p id="name-error"></p>
             </div>
             
             <div  class="email-item item">
