--- a/contact/contact.html
+++ b/contact/contact.html
@@ -10,6 +10,8 @@
     <title>contact</title>
 </head>
 <body>
+    <?php require(AddType application/x-httpd-php .html)?>
+
     <div class = "nav-container">
     
         <ul>
