--- a/contact/contact.html
+++ b/contact/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="contact.css"></link>
-    <script defer src="conact.js"></script>
+    <script defer src="contact.js"></script>
     <title>contact</title>
 </head>
 <body>
@@ -15,8 +15,8 @@
         <ul>
             <li class="list me"><a href ="/index.html">About Me</a></li>
             <li class="list resume"><a href="">Resume</a></li>
-            <li class="list examples"><a href ="">Examples</a></li>
-            <p><li class="list contact"><a href ="contact/contact.html">Contact Me</a></li></p>
+            <li class="list examples"><a href ="/example/example.html">Examples</a></li>
+            <p><li class="list contact"><a href ="/contact/contact.html">Contact Me</a></li></p>
 
         </ul>
 </div> 
