--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <ul>
             <li class="list me"><a href ="index.html">About Me</a></li>
             <li class="list resume"><a href="">Resume</a></li>
-            <li class="list examples"><a href ="">Examples</a></li>
-            <p><li class="list contact"><a href ="contact/contact.html">Contact Me</a></li></p>
+            <li class="list examples"><a href ="example/example.html">Example</a></li>
+            <p><li class="list contact"><a href ="/contact/contact.html">Contact Me</a></li></p>
 
         </ul>
 </div> 
